--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+div{
+    width: 100%;
+    height: 100%
+}
+
+svg{				
+    width: 100%;		
+    height: 100%; 
+}
+
 #correlationMatrix {
     height: 1000
 }
