removed bootstrap, let's just have relative positioning

--- a/style.css
+++ b/style.css
@@ -16,3 +16,11 @@ svg {
     stroke-width: 1px;
     stroke: black;
 }
+
+.legend {
+    font-size: 11;
+}
+
+#colourBar {
+    position: relative;
+}
