--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-div {
-    width: 100%;
-    height: 100%
-}
-
-svg {				
-    width: 100%;		
-    height: 100%; 
-}
-
-#correlationMatrix {
-    height: 1000
-}
-
 .cell {
     stroke-width: 1px;
     stroke: black;
@@ -23,4 +9,17 @@ svg {
 
 #colourBar {
     position: relative;
+}
+
+#map {
+    position: relative;
+}
+
+#mapTitle {
+    position: relative;
+}
+
+.sectionTitle {
+    font-size: 22;
+    font-weight: bold;
 }
